--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "@mui/x-date-pickers": "^7.4.0",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.0",
+    "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
